@@ -8,7 +8,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --aux-dir=. --avoid=xalloc-die --macro-prefix=gl base64 c-ctype getopt getpass gettext hmac-md5 md5 socklen sysexits xalloc xvasprintf
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --aux-dir=. --avoid=xalloc-die --macro-prefix=gl base64 c-ctype getopt getpass gettext hmac-md5 md5 nanosleep socklen sysexits xalloc xvasprintf
 
 AUTOMAKE_OPTIONS = 1.5 gnits no-dependencies
 
