@@ -20,6 +20,7 @@ AC_DEFUN([gl_EARLY],
 [
   AC_REQUIRE([AC_PROG_RANLIB])
   AC_REQUIRE([AC_GNU_SOURCE])
+  AC_REQUIRE([gl_USE_SYSTEM_EXTENSIONS])
 ])
 
 # This macro should be invoked from ./configure.ac, in the section
@@ -29,6 +30,7 @@ AC_DEFUN([gl_INIT],
   AM_CONDITIONAL([GL_COND_LIBTOOL], [false])
   gl_FUNC_ALLOCA
   gl_FUNC_BASE64
+  dnl gl_USE_SYSTEM_EXTENSIONS must be added quite early to configure.ac.
   gl_FUNC_GETDELIM
   gl_FUNC_GETLINE
   gl_GETOPT
@@ -38,6 +40,7 @@ AC_DEFUN([gl_INIT],
   gl_HMAC_MD5
   gl_MD5
   gl_MEMXOR
+  gl_FUNC_NANOSLEEP
   gl_C_RESTRICT
   gl_SIZE_MAX
   gl_TYPE_SOCKLEN_T
@@ -45,6 +48,7 @@ AC_DEFUN([gl_INIT],
   gl_STDINT_H
   gl_HEADER_SYS_SOCKET
   gl_SYSEXITS
+  gl_TIMESPEC
   gl_HEADER_UNISTD
   gl_FUNC_VASNPRINTF
   gl_FUNC_VASPRINTF
@@ -80,6 +84,7 @@ AC_DEFUN([gl_FILE_LIST], [
   lib/md5.h
   lib/memxor.c
   lib/memxor.h
+  lib/nanosleep.c
   lib/printf-args.c
   lib/printf-args.h
   lib/printf-parse.c
@@ -89,6 +94,7 @@ AC_DEFUN([gl_FILE_LIST], [
   lib/stdbool_.h
   lib/stdint_.h
   lib/sysexit_.h
+  lib/timespec.h
   lib/vasnprintf.c
   lib/vasnprintf.h
   lib/vasprintf.c
@@ -103,6 +109,7 @@ AC_DEFUN([gl_FILE_LIST], [
   m4/base64.m4
   m4/codeset.m4
   m4/eoverflow.m4
+  m4/extensions.m4
   m4/getdelim.m4
   m4/getline.m4
   m4/getopt.m4
@@ -127,6 +134,7 @@ AC_DEFUN([gl_FILE_LIST], [
   m4/longlong.m4
   m4/md5.m4
   m4/memxor.m4
+  m4/nanosleep.m4
   m4/nls.m4
   m4/onceonly_2_57.m4
   m4/po.m4
@@ -141,6 +149,7 @@ AC_DEFUN([gl_FILE_LIST], [
   m4/stdint_h.m4
   m4/sys_socket_h.m4
   m4/sysexits.m4
+  m4/timespec.m4
   m4/uintmax_t.m4
   m4/ulonglong.m4
   m4/unistd_h.m4
